CROPS-200 Fixing vertical alignment of author picture

--- a/css/luggage_aliases.css
+++ b/css/luggage_aliases.css
@@ -9,6 +9,7 @@
 
 .media-left {
     padding-right: 10px;
+    vertical-align: top;
 }
 
 .img-avatar {
